rearranging some of the resources
... trying to improve alignment/feng shui of the page

--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -30,14 +30,14 @@
       </p>
     </div>
     <div class="col-xs-6 col-lg-4">
-      <h4><a href="//www.enrollmissouri.org/">Missouri Healthcare Marketplace</a></h4>
-      Hotline for consumer questions and initiating the process of insurance. This website contains some extra information about the Affordable Care Act, so it might be useful to start here. <br>
-      <abbr title="Phone">P:</abbr> (800) 318-2596<br></p>
-    </div>
-    <div class="col-xs-6 col-lg-4">
       <h4><a href="//www.medicaid.gov/">Medicaid</a></h4>
       <p>Low cost health insurance through Medicaid or CHIP (Children’s Health Insurance Program).
       </p>
+    </div>
+    <div class="col-xs-6 col-lg-4">
+      <h4><a href="//www.enrollmissouri.org/">Missouri Healthcare Marketplace</a></h4>
+      Hotline for consumer questions and initiating the process of insurance. This website contains some extra information about the Affordable Care Act, so it might be useful to start here. <br>
+      <abbr title="Phone">P:</abbr> (800) 318-2596<br></p>
     </div>
   </div>
   <div class="container">
@@ -46,16 +46,7 @@
       preventive care, including health, oral, and mental health/substance abuse services to persons of all ages, regardless
       of their ability to pay or health insurance status. FQHCs charge for services on a community board approved sliding-fee
       scale that is based on patients' family income and size.<p>
-    <div class="col-xs-6 col-lg-3">
-      <h4><a href="//www.fchcstl.org/">Family Care Health Centers</a></h4>
-      <strong>Carondelet Location</strong><br>
-      401 Holly Hills Avenue<br>
-      <abbr title="Phone">P:</abbr> (314) 353-5190<br>
-      <strong>Forest Park Southeast Location</strong><br>
-      4352 Manchester Avenue<br>
-      <abbr title="Phone">P:</abbr> (314) 531-5444<br>
-    </div>
-    <div class="col-xs-6 col-lg-3">
+        <div class="col-xs-6 col-lg-3">
       <h4><a href="//affiniahealthcare.org/">Affinia Healthcare</a></h4>
       <p><em>formerly Grace Hill Health Centers</em><br>
       A number of locations across St. Louis<br>
@@ -65,6 +56,15 @@
       <h4><a href="//www.mhdchc.org/">Myrtle Hilliard Davis Comprehensive Health Centers</a></h4>
       Three locations in St. Louis<br>
       <abbr title="Phone">P:</abbr> (314) 633-6363<br>
+    </div>
+    <div class="col-xs-6 col-lg-3">
+      <h4><a href="//www.fchcstl.org/">Family Care Health Centers</a></h4>
+      <strong>Carondelet Location</strong><br>
+      401 Holly Hills Avenue<br>
+      <abbr title="Phone">P:</abbr> (314) 353-5190<br>
+      <strong>Forest Park Southeast Location</strong><br>
+      4352 Manchester Avenue<br>
+      <abbr title="Phone">P:</abbr> (314) 531-5444<br>
     </div>
     <div class="col-xs-6 col-lg-3">
       <h4><a href="//www.stlouisihn.org/index-of-providers">Integrated Health Network - Provider Index</a></h4>
@@ -114,16 +114,15 @@
       <div class="col-xs-4 col-lg-3">
         <strong>Call for Help - Metro East</strong><br>
         Multi-service agency for crisis situations<br>
-        <abbr title="Phone">P:</abbr> 618-397-0968
+        <abbr title="Phone">P:</abbr> 618-397-0968<br>
       </div>
       <div class="col-xs-4 col-lg-3">
-        <strong>Hunger Hotline</strong><br>
-        Comprehensive list of food pantries in the St. Louis region<br>
-        <abbr title="Phone">P:</abbr> 314-726-5355
+        <strong>Women's Safe House</strong><br>
+        <abbr title="Phone">P:</abbr> 314-772-8952<br>
       </div>
       <div class="col-xs-4 col-lg-3">
         <strong>Mental Health Hotline</strong><br>
-        <abbr title="Phone">P:</abbr> 800-273-TALK (8255)
+        <abbr title="Phone">P:</abbr> 800-273-TALK (8255)<br>
       </div>
       <div class="col-xs-4 col-lg-3">
         <strong>GED Hotline</strong><br>
@@ -132,8 +131,9 @@
     </div>
     <div class="row">
       <div class="col-xs-4 col-lg-3">
-        <strong>Women's Safe House</strong><br>
-        <abbr title="Phone">P:</abbr> 314-772-8952
+      <strong>Hunger Hotline</strong><br>
+        Comprehensive list of food pantries in the St. Louis region<br>
+        <abbr title="Phone">P:</abbr> 314-726-5355
       </div>
       <div class="col-xs-4 col-lg-3">
         <strong>Youth in Need Hotline</strong><br>
