trying out bootstrap

--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -46,16 +46,12 @@
       preventive care, including health, oral, and mental health/substance abuse services to persons of all ages, regardless
       of their ability to pay or health insurance status. FQHCs charge for services on a community board approved sliding-fee
       scale that is based on patients' family income and size.<p>
+      <div class="row">
         <div class="col-xs-6 col-lg-3">
       <h4><a href="//affiniahealthcare.org/">Affinia Healthcare</a></h4>
       <p><em>formerly Grace Hill Health Centers</em><br>
       A number of locations across St. Louis<br>
       <abbr title="Phone">P:</abbr> (314) 814-8700</p>
-    </div>
-    <div class="col-xs-6 col-lg-3">
-      <h4><a href="//www.mhdchc.org/">Myrtle Hilliard Davis Comprehensive Health Centers</a></h4>
-      Three locations in St. Louis<br>
-      <abbr title="Phone">P:</abbr> (314) 633-6363<br>
     </div>
     <div class="col-xs-6 col-lg-3">
       <h4><a href="//www.fchcstl.org/">Family Care Health Centers</a></h4>
@@ -65,7 +61,13 @@
       <strong>Forest Park Southeast Location</strong><br>
       4352 Manchester Avenue<br>
       <abbr title="Phone">P:</abbr> (314) 531-5444<br>
-    </div>
+    </div></div>
+     <div class="row">
+        <div class="col-xs-6 col-lg-3">
+      <h4><a href="//www.mhdchc.org/">Myrtle Hilliard Davis Comprehensive Health Centers</a></h4>
+      Three locations in St. Louis<br>
+      <abbr title="Phone">P:</abbr> (314) 633-6363<br>
+      </div>
     <div class="col-xs-6 col-lg-3">
       <h4><a href="//www.stlouisihn.org/index-of-providers">Integrated Health Network - Provider Index</a></h4>
       The Integrated Health Network's Index of Providers is a comprehensive list of FQHCs in the St. Louis Region.
