--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -51,8 +51,11 @@
       <h4><a href="//affiniahealthcare.org/">Affinia Healthcare</a></h4>
       <p><em>formerly Grace Hill Health Centers</em><br>
       A number of locations across St. Louis<br>
-      <abbr title="Phone">P:</abbr> (314) 814-8700</p>
-    </div>
+      <abbr title="Phone">P:</abbr> (314) 814-8700</p><br>
+      <h4><a href="//www.mhdchc.org/">Myrtle Hilliard Davis Comprehensive Health Centers</a></h4>
+      Three locations in St. Louis<br>
+      <abbr title="Phone">P:</abbr> (314) 633-6363<br>
+      </div>
     <div class="col-xs-6 col-lg-3">
       <h4><a href="//www.fchcstl.org/">Family Care Health Centers</a></h4>
       <strong>Carondelet Location</strong><br>
@@ -63,11 +66,6 @@
       <abbr title="Phone">P:</abbr> (314) 531-5444<br>
     </div></div>
      <div class="row">
-        <div class="col-xs-6 col-lg-3">
-      <h4><a href="//www.mhdchc.org/">Myrtle Hilliard Davis Comprehensive Health Centers</a></h4>
-      Three locations in St. Louis<br>
-      <abbr title="Phone">P:</abbr> (314) 633-6363<br>
-      </div>
     <div class="col-xs-6 col-lg-3">
       <h4><a href="//www.stlouisihn.org/index-of-providers">Integrated Health Network - Provider Index</a></h4>
       The Integrated Health Network's Index of Providers is a comprehensive list of FQHCs in the St. Louis Region.
