updating hotlines with an understanding of bootstrap

--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -51,7 +51,7 @@
       <h4><a href="//affiniahealthcare.org/">Affinia Healthcare</a></h4>
       <p><em>formerly Grace Hill Health Centers</em><br>
       A number of locations across St. Louis<br>
-      <abbr title="Phone">P:</abbr> (314) 814-8700</p><br>
+      <abbr title="Phone">P:</abbr> (314) 814-8700</p>
       <h4><a href="//www.mhdchc.org/">Myrtle Hilliard Davis Comprehensive Health Centers</a></h4>
       Three locations in St. Louis<br>
       <abbr title="Phone">P:</abbr> (314) 633-6363<br>
@@ -124,10 +124,6 @@
         <strong>Mental Health Hotline</strong><br>
         <abbr title="Phone">P:</abbr> 800-273-TALK (8255)<br>
       </div>
-      <div class="col-xs-4 col-lg-3">
-        <strong>GED Hotline</strong><br>
-        <abbr title="Phone">P:</abbr> 800-626-9433
-      </div>
     </div>
     <div class="row">
       <div class="col-xs-4 col-lg-3">
@@ -138,6 +134,10 @@
       <div class="col-xs-4 col-lg-3">
         <strong>Youth in Need Hotline</strong><br>
         <abbr title="Phone">P:</abbr> 636-946-3771
+      </div>
+      <div class="col-xs-4 col-lg-3">
+        <strong>GED Hotline</strong><br>
+        <abbr title="Phone">P:</abbr> 800-626-9433
       </div>
     </div>
 </div>
