Fixing additional ordered list item on medstudents.

--- a/app/partials/medstudents.html
+++ b/app/partials/medstudents.html
@@ -10,10 +10,10 @@
   <ol> 
     <li> Log in to <a href="https://snhc.wusm.wustl.edu/">SharePoint</a> using "medpriv\" + your Medportal username
       <ol type="a" >
-	<li> You <u>must</u> use backslash = "\", not "/" </li>
-	<li> Example: For student Jane Smith, type <b>medpriv\smithj</b> </li>
+      	<li> You <u>must</u> use backslash = "\", not "/" </li>
+      	<li> Example: For student Jane Smith, type <b>medpriv\smithj</b> </li>
       </ol>
     <li> <u>Mouse over</u> dates (in the left column) to view sign-up slots. </li>
     <li> Click on a date to view the entry for that day in more detail. <u>This will allow you to see the <strong>coordinator's email</strong> and <b>volunteers' phone numbers</b>, which are not visible on the main page due to space limitations.</u></li>
-    <li>Click "<b>Edit Form</b>" <font color="red">(<b><u>NOT</u></b> <del>"New Item"</del>)</font> to type in your info on the sign-up form.<li>  
+    <li>Click "<b>Edit Form</b>" <font color="red">(<b><u>NOT</u></b> <del>"New Item"</del>)</font> to type in your info on the sign-up form.  
 </div>
