Add volunteer manual to medstudents.

--- a/app/partials/medstudents.html
+++ b/app/partials/medstudents.html
@@ -5,6 +5,11 @@
   </div>
 </div>
 
+<div class="container">
+  <h2>Volunteer Manual</h2>
+  <p>The updated 2015-2016 <a href="//drive.google.com/file/d/0Bw8q27uEs5QJYjNlZjI3eUd3NGc/view?usp=sharing">Volunteer Manual</a> describes everything you need to know to prepare for your responsibilities at the SNHC. Inside you will find details of the clinic workflow, stepwise instructions for your day, and helpful tips and advice to optimize your volunteer experience.</p>
+</div>
+
 <div class="container">  
   <h2>Sign Up</h2>
   <ol> 
