--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -17,10 +17,11 @@
         (Directions via <a href="https://www.google.com/maps/dir//Family+Care+Health+Center,+Manchester+Avenue,+Saint+Louis,+MO">Google Maps</a>)
       </address>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
       <address>
 	       <strong>Our Specialty Clinic</strong><br>
-	       4570 Children's Place<br>
+	       <a href="https://www.google.com/maps/place/4570+Childrens+Pl,+St+Louis,+MO+63110">4570 Children's Place</a> (before July 22, 2015)<br>
+         <a href="https://www.google.com/maps/place/620+S+Taylor+Ave,+St+Louis,+MO+63110">620 S Taylor Ave</a> (on or after July 22, 2015)<br>
 	       St. Louis, MO 63110<br>
       </address>
     </div>
