Update address to remove old address for specialty clinic.

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -12,16 +12,14 @@
       <address>
 	      <strong>Our Saturday Clinic</strong><br>
         The Family Care Health Center<br>
-        4352 Manchester Avenue<br>
-        St. Louis, MO 63110<br>
-        (Directions via <a href="https://www.google.com/maps/dir//Family+Care+Health+Center,+Manchester+Avenue,+Saint+Louis,+MO">Google Maps</a>)
+        <a href="https://www.google.com/maps/dir//Family+Care+Health+Center,+Manchester+Avenue,+Saint+Louis,+MO">4352 Manchester Avenue</a><br>
+        St. Louis, MO 63110
       </address>
     </div>
     <div class="col-md-4">
       <address>
 	       <strong>Our Specialty Clinic</strong><br>
-	       <a href="https://www.google.com/maps/place/4570+Childrens+Pl,+St+Louis,+MO+63110">4570 Children's Place</a> (before July 22, 2015)<br>
-         <a href="https://www.google.com/maps/place/620+S+Taylor+Ave,+St+Louis,+MO+63110">620 S Taylor Ave</a> (on or after July 22, 2015)<br>
+         <a href="https://www.google.com/maps/place/620+S+Taylor+Ave,+St+Louis,+MO+63110">620 S Taylor Ave</a><br>
 	       St. Louis, MO 63110<br>
       </address>
     </div>
