added independence center

--- a/app/partials/resources.html
+++ b/app/partials/resources.html
@@ -98,6 +98,11 @@
       <h4>American Red Cross - <a href="//www.RedCrossStl.org/">St. Louis Chapter</a></h4>
       <abbr title="Phone">P:</abbr> (314) 333-JOBS (5627)
     </div>
+     <div class="col-xs-6 col-lg-4">
+      <h4><a href="//www.independencecenter.org/">Independence Center</a></h4>
+      Independence Center is a community-based rehabilitation program for adults with severe and persistent mental illnesses in the St. Louis area, built on the Clubhouse model of psychosocial rehabilitation.<br>
+      <abbr title="Phone">P:</abbr> (314) 533-4245
+    </div>
     <div class="col-xs-6 col-lg-4">
       <h4><a href="//www.ccstl.org/">Catholic Charities</a></h4>
       <abbr title="Phone">P:</abbr> (800) 318-2596
