--- a/app/partials/services.html
+++ b/app/partials/services.html
@@ -37,7 +37,7 @@
   </p>
   <h1>Wednesday Specialty Nights</h1>
   <p> The Wednesday Specialty Nights provide free medical specialty services for uninsured patients.
-    Specialty services include an Orthopedics service for muscle and joint pain and services for depression and anxiety. 
+    Specialty services currently include a depression and anxiety clinc located at 620 S Taylor Avenue on the third Wednesday of the month. 
     The services offered vary by week, so please check our Google calendar for the most up to date information. 
   </p>
 </div>
