--- a/app/partials/services.html
+++ b/app/partials/services.html
@@ -37,7 +37,7 @@
   </p>
   <h1>Wednesday Specialty Nights</h1>
   <p> The Wednesday Specialty Nights provide free medical specialty services for uninsured patients.
-    Specialty services include an Orthopedics service for muscle and joint pain and services for depression and anxiety. 
-    The services offered vary by week, so please check our Google calendar for the most up to date information. 
+    Specialty services include services for depression and anxiety on the fourth Wednesday of each month. 
+    Please check our Google calendar for the most up to date information. 
   </p>
 </div>
