--- a/app/partials/physicians.html
+++ b/app/partials/physicians.html
@@ -7,30 +7,16 @@
 
 <div class="container">
   <h2>Getting Involved</h2>
-  <p>We are trying to recruit more <strong>Washington University-affiliated physicians who are boarded in emergency medicine, internal medicine, or OB/GYN</strong> to volunteer at the clinic on a Saturday morning, from 8:45AM to about 1:00PM to 2:00PM.</p>
+  <p>We are always trying to recruit more <strong>Washington University-affiliated physicians who are boarded in emergency medicine, internal medicine, or OB/GYN</strong> to volunteer at the clinic on a Saturday morning, from 9:00AM to about 1:00PM to 2:00PM. Washington University-affiliated physicians in other specialties, and community physicians with their own insurance policies are also encouraged to volunteer at the SNHC, though the times available may be more limited. </p>
 
-  <p>We see 6-9 patients during each clinic session. You will work with up to three preclinical students and three clinical students. The students perform a full history and physical exam as time allows, then present and discuss the case with you. No orientation is needed for volunteer physicians, as our students are responsible for all paperwork. There is one student coordinator during each clinic session whose duty is to supervise paperwork and logistics. Periodically, the coordinator may  ask you to interpret lab results from the previous weeks' patients.</p>
+  <p>We see an average of 9 patients during each Saturday clinic session and currently about 4 patients during our Depression and Anxiety Specialty night. You will work with up to three preclinical students and three clinical students. The students perform a full history and physical exam, then present and discuss the case with you. No orientation is needed for volunteer physicians, as our students are responsible for all paperwork. There is one student coordinator during each clinic session whose duty is to supervise paperwork and logistics. Periodically, the coordinator may  ask you to interpret lab results from the previous weeks' patients.</p>
                     
-  <p> Since many of our patients do not have primary care physicians, we do our best to set up appointments and connect them with other community health facilities (such as the Family Care Health Center) for future care.
-    We can only see individual patients up to 3 times per year, as we are currently unable to serve as a permanent primary care venue.</p>
-  <p>If you are interested in volunteering, please <a href="#contact">contact us</a> at our general email. One of our physician coordinators (listed below) will be in touch with you to set a date that works best for you. Also feel free to contact us if you have any questions or concerns. (A list of available dates can be found <a href="https://snhc.wusm.wustl.edu/Lists/SNHC%20Sign%20UP/physicianssignup.aspx">here</a>. Use your Medpriv). We look forward to hearing from you!</p>
+  <p>We can only see individual patients up to 3 times per year, as we are currently unable to serve as a permanent primary care venue. However, we do our best to set up appointments and connect our patients with other community health facilities (such as the Family Care Health Center) for future care.</p>
+  
+  <p>If you are interested in volunteering, please fill out this brief <strong><a href="http://goo.gl/forms/aVAfCBTSG2">survey</a></strong>. One of our physician coordinators (listed below) will be in touch with you to set a date that works best for you. Also feel free to <a href="#/contact">contact us</a> if you have any questions or concerns. (A list of available dates can be found <a href="https://snhc.wusm.wustl.edu/Lists/SNHC%20Sign%20UP/physicianssignup.aspx">here</a>. Use your Medpriv). We look forward to hearing from you!</p>
   
   <p>
     The 2015-2016 physician coordinators:<br>
     Kavon Javaharian<br>
     Mahati Mokkarala
   </p>
-  
-  <h2>Signing Up</h2>
-  <ol>
-    <li> Using your department account (i.e. "DOMAIN\username"), log in to our SharePoint tracker for either <a href="https://snhc.wusm.wustl.edu/Lists/SNHC%20Sign%20UP/physicianssignup.aspx">Saturday Clinic</a> or <a href="http://snhc.wusm.wustl.edu/Lists/SNHC%20Sign%20UP/Specialty%20Night%20Physician%20Sign%20Up.aspx">Specialty Night</a>
-      <ol type="a">
-        <li> You <u>must</u> use backslash = "\", not "/" </li>
-        <li> Example: For Dr. Jane Smith, type "<b>MEDPRIV\smithj</b>" without the quotes. If this does not work, try logging in using other domains your username is associated with, e.g."DOM\username". If this fails too, please contact our <a href="contact.html">physician recruitment coordinators</a></li>
-      </ol>
-    <li>Logging in should bring you to a spreadsheet with two columns. An empty cell in the "Attending Physician" column indicates that a date is free.</li>
-    <li> Click on a date to view the entry for that day in more detail. <u>This will allow you to see the <strong>coordinator's email</strong> and <b>volunteers' phone numbers</b>, which are not visible on the main page due to space limitations.</u>
-    </li>
-    <li> Click "<b>Edit Form</b>" (careful: <b>not</b> "New Item") and fill-in the cell for "Attending Physician", which is at the bottom of the form. </li>
-    <li> Go back, and refresh to double-check to make sure SharePoint took your input! </li>
-</div>
