update new specialty clinic site
new location added

--- a/app/partials/faq.html
+++ b/app/partials/faq.html
@@ -70,7 +70,7 @@
     <li>
       <p><strong>Where are you located?</strong><br>
 	The Saturday clinic is located inside the Family Care Health Center at 4352 Manchester Avenue, St. Louis, Missouri. 
-	The Wednesday clinic is located inside the Infectious Diseases outpatient clinic at 4570 Children's Place on the Washington University Medical Campus, near the CWE MetroLink stop. Please click <a href="#contact">this link</a> for directions.
+	The Wednesday clinic is located inside the Infectious Diseases outpatient clinic at 620 S Taylor Avenue on the Washington University Medical Campus, near the CWE MetroLink stop. Please click <a href="#contact">this link</a> for directions.
 	</p>
     </li>
   </ol>
