Updated the SNHC Board

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -37,39 +37,48 @@
   <div class="col-md-12">
     <div class="col-md-4">
       <h3>Co-Chairs</h3>
-      <p>Radhika Jain</p>
-      <p>Emily Davis</p>
+      <p>Damini Tandon</p>
+      <p>Helena Hong</p>
     </div>
     <div class="col-md-4">
       <h3>Outreach</h3>
-      <p>Elizabeth Maidl</p>
-      <p>Jacob Groenendyk</p>
-      <p>Rachel Springer</p>
+      <p>Danielle Chirumbole</p>
+      <p>Emma Winkler</p>
     </div>
     <div class="col-md-4">
       <h3>Volunteer Recruitment</h3>
-      <p>Shamaita Majumdar</p>
+      <p>Liz Graesser</p>
     </div>
   </div>
   <div class="col-md-12">
     <div class="col-md-4">
       <h3>Physician Recruitment</h3>
-      <p>Kavon Javaharian</p>
-      <p>Mahati Mokkarala</p>
+      <p>Kevin Tamadonfar</p>
+      <p>Fatima Alvi</p>
     </div>
     <div class="col-md-4">
       <h3>Treasurer</h3>
-      <p>R. Lucas Thomas</p>
+      <p>Alexandra Keane</p>
+    </div>
+    <div class="col-md-4">
+      <h3>Public Relations</h3>
+      <p>Caroline Min</p>
     </div>
     <div class="col-md-4">
       <h3>Data Management</h3>
-      <p>Derek Schloemann</p>
+      <p>Toby Manders</p>
+      <p>Alexandra Houston-Ludlam</p>
     </div>
   </div>
   <div class="col-md-12">
     <div class="col-md-4">
+      <h3>Interdisciplinary Partnerships</h3>
+      <p>Maria Schwabe</p>
+      <p>Teresa Chen</p>
+    </div>
+    <div class="col-md-4">
       <h3>Information Technology</h3>
-      <p>Justin Porter</p>
+      <p>Nakul Shah</p>
     </div>
   </div>
 </div>
