Centered Video and Added Warning for this Saturday

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -5,8 +5,18 @@
   </div>
 </div>
 
-<iframe src="https://player.vimeo.com/video/188660847" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/188660847">Saturday Neighborhood Health Clinic</a> from <a href="https://vimeo.com/user54861497">School of Medicine Annual Fund</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<div class=“container>
+  <center>
+    <h1>The SNHC will be CLOSED on 1/14 due to inclement weather. We plan to be open again on 1/21.</h1>
+  </center>
+</div>
+
+<div class="container">
+  <center>
+    <iframe src="https://player.vimeo.com/video/188660847" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <p><a href="https://vimeo.com/188660847">Saturday Neighborhood Health Clinic</a> from <a href="https://vimeo.com/user54861497">School of Medicine Annual Fund</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+  </center>
+</div>
 
 <div class="container marketing" style="padding:75px">
   <div class="row">
