Updated board members

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -37,48 +37,52 @@
   <div class="col-md-12">
     <div class="col-md-4">
       <h3>Co-Chairs</h3>
-      <p>Damini Tandon</p>
-      <p>Helena Hong</p>
+      <p>Vincent Peng</p>
+      <p>Hera Maryam</p>
     </div>
     <div class="col-md-4">
       <h3>Outreach</h3>
-      <p>Danielle Chirumbole</p>
-      <p>Emma Winkler</p>
+      <p>Natasha Kafai</p>
+      <p>Nishkala Shivakumar</p>
     </div>
     <div class="col-md-4">
       <h3>Volunteer Recruitment</h3>
-      <p>Liz Graesser</p>
+      <p>Shahroz Fatima</p>
+      <p>Bradley Buse</p>
     </div>
   </div>
   <div class="col-md-12">
     <div class="col-md-4">
       <h3>Physician Recruitment</h3>
-      <p>Kevin Tamadonfar</p>
-      <p>Fatima Alvi</p>
+      <p>Griffin Plattner</p>
+      <p>Anna Trier</p>
     </div>
     <div class="col-md-4">
       <h3>Treasurer</h3>
-      <p>Alexandra Keane</p>
+      <p>Christine Park</p>
     </div>
     <div class="col-md-4">
       <h3>Public Relations</h3>
-      <p>Caroline Min</p>
+      <p>Edward Lee</p>
+      <p>Aisha Lee</p>
     </div>
     <div class="col-md-4">
       <h3>Data Management</h3>
-      <p>Toby Manders</p>
-      <p>Alexandra Houston-Ludlam</p>
+      <p>Taylor Dibble</p>
+      <p>Samantha Greaney</p>
+      <p>Catherine Xu</p>
     </div>
   </div>
   <div class="col-md-12">
     <div class="col-md-4">
       <h3>Interdisciplinary Partnerships</h3>
-      <p>Maria Schwabe</p>
-      <p>Teresa Chen</p>
+      <p>Jimmy He</p>
+      <p>Sam Broughton</p>
+      <p>Preethi Kesavan</p>
     </div>
     <div class="col-md-4">
       <h3>Information Technology</h3>
-      <p>Nakul Shah</p>
+      <p>Minerva Zhou</p>
     </div>
   </div>
 </div>
