--- a/app/partials/physicians.html
+++ b/app/partials/physicians.html
@@ -16,7 +16,7 @@
   <p>If you are interested in volunteering, please fill out this brief <strong><a href="http://goo.gl/forms/aVAfCBTSG2">survey</a></strong>. One of our physician coordinators (listed below) will be in touch with you to set a date that works best for you. Also feel free to <a href="#/contact">contact us</a> if you have any questions or concerns. (A list of available dates can be found <a href="https://snhc.wusm.wustl.edu/Lists/SNHC%20Sign%20UP/physicianssignup.aspx">here</a>. Use your Medpriv). We look forward to hearing from you!</p>
   
   <p>
-    The 2015-2016 physician coordinators:<br>
-    Kavon Javaharian<br>
-    Mahati Mokkarala
+    The 2017-2018 physician coordinators:<br>
+    Griffin Plattner<br>
+    Anna Trier
   </p>
