--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container" style="padding:75px">
   <center>
     <iframe src="https://player.vimeo.com/video/188660847" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     <p><a href="https://vimeo.com/188660847">Saturday Neighborhood Health Clinic</a> from <a href="https://vimeo.com/user54861497">School of Medicine Annual Fund</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
