Updated volunteer manual and checklist

--- a/app/partials/medstudents.html
+++ b/app/partials/medstudents.html
@@ -7,12 +7,12 @@
 
 <div class="container">
   <h2>Volunteer Manual</h2>
-  <p>The updated 2016-2017 <a href="//drive.google.com/file/d/0B-slvOJX696VbmF2U1NKMWtickU/view?usp=sharing">Volunteer Manual</a> describes everything you need to know to prepare for your responsibilities at the SNHC. Inside you will find details of the clinic workflow, stepwise instructions for your day, and helpful tips and advice to optimize your volunteer experience.</p>
+  <p>The updated 2017-2018 <a href="//drive.google.com/file/d/0B5zB1HU_3q8QT0czcEtRM2pvZWs/view">Volunteer Manual</a> describes everything you need to know to prepare for your responsibilities at the SNHC. Inside you will find details of the clinic workflow, stepwise instructions for your day, and helpful tips and advice to optimize your volunteer experience.</p>
 </div>
 
 <div class="container">
   <h2>Volunteer Checklist</h2>
-  <p>The updated 2016-2017 <a href="//drive.google.com/file/d/0B-slvOJX696VYXVMc24wSEZhOXM/view?usp=sharing">Volunteer Checklist</a> describes the daily workflow for volunteers</p>
+  <p>The updated 2017-2018 <a href="//drive.google.com/file/d/0B5zB1HU_3q8QazlsWWthdDJXUXc/view">Volunteer Checklist</a> describes the daily workflow for volunteers</p>
 </div>
 
 <div class="container">  
