--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -37,52 +37,57 @@
   <div class="col-md-12">
     <div class="col-md-4">
       <h3>Co-Chairs</h3>
-      <p>Vincent Peng</p>
-      <p>Hera Maryam</p>
+      <p>Timothy Rooney</p>
+      <p>Grace Keane</p>
     </div>
     <div class="col-md-4">
       <h3>Outreach</h3>
-      <p>Natasha Kafai</p>
-      <p>Nishkala Shivakumar</p>
+      <p>Nisha Bhat</p>
+      <p>Jack LeClair</p>
+      <p>Priyanka Parameswaran</p>
     </div>
     <div class="col-md-4">
       <h3>Volunteer Recruitment</h3>
-      <p>Shahroz Fatima</p>
-      <p>Bradley Buse</p>
+      <p>Kim Johansson</p>
+      <p>Sajal Tiwary</p>
     </div>
   </div>
   <div class="col-md-12">
     <div class="col-md-4">
       <h3>Physician Recruitment</h3>
-      <p>Griffin Plattner</p>
-      <p>Anna Trier</p>
+      <p>Nick Becker</p>
+      <p>Corey Vural</p>
     </div>
     <div class="col-md-4">
       <h3>Treasurer</h3>
-      <p>Christine Park</p>
+      <p>Alex Scott</p>
     </div>
     <div class="col-md-4">
       <h3>Public Relations</h3>
-      <p>Edward Lee</p>
-      <p>Aisha Lee</p>
+      <p>Lade Sogade</p>
+      <p>Avira Som</p>
     </div>
     <div class="col-md-4">
       <h3>Data Management</h3>
-      <p>Taylor Dibble</p>
-      <p>Samantha Greaney</p>
-      <p>Catherine Xu</p>
+      <p>Meg Landon</p>
+      <p>Nicolas Ledru</p>
+      <p>Arjav Shah</p>
+    </div>
+    <div class="col-md-4">
+      <h3>Clinic Manager</h3>
+      <p>Adam Surti</p>
     </div>
   </div>
   <div class="col-md-12">
     <div class="col-md-4">
       <h3>Interdisciplinary Partnerships</h3>
-      <p>Jimmy He</p>
-      <p>Sam Broughton</p>
-      <p>Preethi Kesavan</p>
+      <p>Sophie Evans</p>
+      <p>Benji Katz</p>
+      <p>Adrew Qi</p>
     </div>
     <div class="col-md-4">
       <h3>Information Technology</h3>
-      <p>Minerva Zhou</p>
+      <p>Artur Meller</p>
     </div>
   </div>
 </div>
