--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -83,7 +83,7 @@
       <h3>Interdisciplinary Partnerships</h3>
       <p>Sophie Evans</p>
       <p>Benji Katz</p>
-      <p>Adrew Qi</p>
+      <p>Andrew Qi</p>
     </div>
     <div class="col-md-4">
       <h3>Information Technology</h3>
